--- a/Apps/UnitTests/Android/app/src/main/res/values/strings.xml
+++ b/Apps/UnitTests/Android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">JsRuntimeHost UnitTests</string>
+    <string name="app_name">BabylonNative UnitTests</string>
 </resources>
